gen/cedlParser.py
# Generated from C:/Users/fit/PycharmProjects/CEP/src\cedl.g4 by ANTLR 4.5.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO


from code.cedl_node import *
from collections import OrderedDict
from Queue import Queue, Empty


class cedlParser ( Parser ):

    grammarFileName = "cedl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                     u"<INVALID>", u"'<'", u"'<='", u"'>'", u"'>='", u"'='", 
                     u"'!='", u"'<<'", u"'>>'", u"'=='", u"'<>'", u"'+'", 
                     u"'-'", u"'*'", u"'/'", u"'%'", u"'&'", u"'&&'", u"'|'", 
                     u"'||'", u"'('", u"')'", u"'{'", u"'}'", u"','", u"';'", 
                     u"'.'", u"'~'", u"'$'" ]

    symbolicNames = [ u"<INVALID>", u"WS", u"TRUE", u"FALSE", u"SELECT", 
                      u"DEFINE", u"FROM", u"PATTERN", u"LIMIT", u"TIMEWINDOW", 
                      u"LENWINDOW", u"CONTEXT", u"CHRONICLE", u"RECENT", 
                      u"CONTINUOUS", u"CUMULATIVE", u"AND", u"OR", u"NOT", 
                      u"XOR", u"NAND", u"NOR", u"REPEAT", u"SEQ", u"WITHIN", 
                      u"FOLLOWBY", u"DURING", u"EQUAL", u"INTERVAL", u"AT", 
                      u"CONTAINS", u"COMPARETO", u"EQUALS", u"MATCHES", 
                      u"TIME_UNIT", u"IDENTIFLER", u"TIME_COMPLETE", u"YEAR", 
                      u"MON", u"DAY", u"HOUR", u"MIN", u"SEC", u"INT", u"NUMERIC", 
                      u"LT", u"LT_EQ", u"GT", u"GT_EQ", u"EQ", u"NOT_EQ1", 
                      u"LT2", u"GT2", u"EQ2", u"NOT_EQ2", u"PLUS", u"MINUS", 
                      u"STAR", u"DIV", u"MOD", u"AMP", u"AMP2", u"PIPE", 
                      u"PIPE2", u"OPEN_PAR", u"CLOSE_PAR", u"OPEN_CURLY", 
                      u"CLOSE_CURLY", u"COMMA", u"SCOL", u"DOT", u"TILDE", 
                      u"DOLLAR", u"STRING", u"SINGLE_LINE_COMMENT", u"MULTI_LINE_COMMENT" ]

    RULE_cedl_events = 0
    RULE_cedl_event = 1
    RULE_select_clause = 2
    RULE_complex_event = 3
    RULE_from_clause = 4
    RULE_event_list = 5
    RULE_event = 6
    RULE_premitive_event = 7
    RULE_pattern_clause = 8
    RULE_pattern_operators = 9
    RULE_link_operator = 10
    RULE_pattern_event_1 = 11
    RULE_time = 12
    RULE_time_start = 13
    RULE_time_end = 14
    RULE_pattern_event_2 = 15
    RULE_pattern_event_n = 16
    RULE_limit_clause = 17
    RULE_filters = 18
    RULE_limit_filter = 19
    RULE_filter_operator = 20
    RULE_filter_value = 21
    RULE_time_clause = 22
    RULE_len_clause = 23
    RULE_context_clause = 24
    RULE_context_value = 25
    RULE_atom_event_name = 26
    RULE_complex_event_name = 27
    RULE_attr_name = 28
    RULE_time_value = 29
    RULE_len_value = 30
    RULE_repeat_num = 31
    RULE_value_num = 32
    RULE_value_numeric = 33
    RULE_time_unit = 34
    RULE_numeric = 35
    RULE_string_key = 36
    RULE_num_key = 37

    ruleNames =  [ u"cedl_events", u"cedl_event", u"select_clause", u"complex_event", 
                   u"from_clause", u"event_list", u"event", u"premitive_event", 
                   u"pattern_clause", u"pattern_operators", u"link_operator", 
                   u"pattern_event_1", u"time", u"time_start", u"time_end", 
                   u"pattern_event_2", u"pattern_event_n", u"limit_clause", 
                   u"filters", u"limit_filter", u"filter_operator", u"filter_value", 
                   u"time_clause", u"len_clause", u"context_clause", u"context_value", 
                   u"atom_event_name", u"complex_event_name", u"attr_name", 
                   u"time_value", u"len_value", u"repeat_num", u"value_num", 
                   u"value_numeric", u"time_unit", u"numeric", u"string_key", 
                   u"num_key" ]

    EOF = Token.EOF
    WS=1
    TRUE=2
    FALSE=3
    SELECT=4
    DEFINE=5
    FROM=6
    PATTERN=7
    LIMIT=8
    TIMEWINDOW=9
    LENWINDOW=10
    CONTEXT=11
    CHRONICLE=12
    RECENT=13
    CONTINUOUS=14
    CUMULATIVE=15
    AND=16
    OR=17
    NOT=18
    XOR=19
    NAND=20
    NOR=21
    REPEAT=22
    SEQ=23
    WITHIN=24
    FOLLOWBY=25
    DURING=26
    EQUAL=27
    INTERVAL=28
    AT=29
    CONTAINS=30
    COMPARETO=31
    EQUALS=32
    MATCHES=33
    TIME_UNIT=34
    IDENTIFLER=35
    TIME_COMPLETE=36
    YEAR=37
    MON=38
    DAY=39
    HOUR=40
    MIN=41
    SEC=42
    INT=43
    NUMERIC=44
    LT=45
    LT_EQ=46
    GT=47
    GT_EQ=48
    EQ=49
    NOT_EQ1=50
    LT2=51
    GT2=52
    EQ2=53
    NOT_EQ2=54
    PLUS=55
    MINUS=56
    STAR=57
    DIV=58
    MOD=59
    AMP=60
    AMP2=61
    PIPE=62
    PIPE2=63
    OPEN_PAR=64
    CLOSE_PAR=65
    OPEN_CURLY=66
    CLOSE_CURLY=67
    COMMA=68
    SCOL=69
    DOT=70
    TILDE=71
    DOLLAR=72
    STRING=73
    SINGLE_LINE_COMMENT=74
    MULTI_LINE_COMMENT=75

    def __init__(self, input):
        super(cedlParser, self).__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    #存储原始事件
    global premitive_events
    premitive_events = {}


    class Cedl_eventsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.Cedl_eventsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def cedl_event(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(cedlParser.Cedl_eventContext)
            else:
                return self.getTypedRuleContext(cedlParser.Cedl_eventContext,i)


        def getRuleIndex(self):
            return cedlParser.RULE_cedl_events

        def enterRule(self, listener):
            if hasattr(listener, "enterCedl_events"):
                listener.enterCedl_events(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCedl_events"):
                listener.exitCedl_events(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCedl_events"):
                return visitor.visitCedl_events(self)
            else:
                return visitor.visitChildren(self)




    def cedl_events(self):

        localctx = cedlParser.Cedl_eventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cedl_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.cedl_event()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==cedlParser.SELECT or _la==cedlParser.DEFINE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Cedl_eventContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.Cedl_eventContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.premitive_events = None

        def select_clause(self):
            return self.getTypedRuleContext(cedlParser.Select_clauseContext,0)


        def from_clause(self):
            return self.getTypedRuleContext(cedlParser.From_clauseContext,0)


        def pattern_clause(self):
            return self.getTypedRuleContext(cedlParser.Pattern_clauseContext,0)


        def limit_clause(self):
            return self.getTypedRuleContext(cedlParser.Limit_clauseContext,0)


        def time_clause(self):
            return self.getTypedRuleContext(cedlParser.Time_clauseContext,0)


        def len_clause(self):
            return self.getTypedRuleContext(cedlParser.Len_clauseContext,0)


        def context_clause(self):
            return self.getTypedRuleContext(cedlParser.Context_clauseContext,0)


        def getRuleIndex(self):
            return cedlParser.RULE_cedl_event

        def enterRule(self, listener):
            if hasattr(listener, "enterCedl_event"):
                listener.enterCedl_event(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCedl_event"):
                listener.exitCedl_event(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCedl_event"):
                return visitor.visitCedl_event(self)
            else:
                return visitor.visitChildren(self)




    def cedl_event(self):

        localctx = cedlParser.Cedl_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_cedl_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.select_clause()
            self.state = 82
            self.from_clause()
            self.state = 83
            self.pattern_clause()
            self.state = 85
            _la = self._input.LA(1)
            if _la==cedlParser.LIMIT:
                self.state = 84
                self.limit_clause()


            self.state = 89
            token = self._input.LA(1)
            if token in [cedlParser.TIMEWINDOW]:
                self.state = 87
                self.time_clause()
                pass
            elif token in [cedlParser.LENWINDOW]:
                self.state = 88
                self.len_clause()
                pass
            elif token in [cedlParser.EOF, cedlParser.SELECT, cedlParser.DEFINE, cedlParser.CONTEXT]:
                pass
            else:
                raise NoViableAltException(self)
            self.state = 92
            _la = self._input.LA(1)
            if _la==cedlParser.CONTEXT:
                self.state = 91
                self.context_clause()



            localctx.premitive_events = premitive_events

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Select_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.Select_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def complex_event(self):
            return self.getTypedRuleContext(cedlParser.Complex_eventContext,0)


        def SELECT(self):
            return self.getToken(cedlParser.SELECT, 0)

        def DEFINE(self):
            return self.getToken(cedlParser.DEFINE, 0)

        def getRuleIndex(self):
            return cedlParser.RULE_select_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterSelect_clause"):
                listener.enterSelect_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSelect_clause"):
                listener.exitSelect_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSelect_clause"):
                return visitor.visitSelect_clause(self)
            else:
                return visitor.visitChildren(self)




    def select_clause(self):

        localctx = cedlParser.Select_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_select_clause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not(_la==cedlParser.SELECT or _la==cedlParser.DEFINE):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
            self.state = 97
            self.complex_event()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Complex_eventContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.Complex_eventContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.complexEventID = None
            self.a = None # Complex_event_nameContext

        def complex_event_name(self):
            return self.getTypedRuleContext(cedlParser.Complex_event_nameContext,0)


        def getRuleIndex(self):
            return cedlParser.RULE_complex_event

        def enterRule(self, listener):
            if hasattr(listener, "enterComplex_event"):
                listener.enterComplex_event(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitComplex_event"):
                listener.exitComplex_event(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitComplex_event"):
                return visitor.visitComplex_event(self)
            else:
                return visitor.visitChildren(self)




    def complex_event(self):

        localctx = cedlParser.Complex_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_complex_event)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            localctx.a = self.complex_event_name()
            localctx.complexEventID = (None if localctx.a is None else self._input.getText((localctx.a.start,localctx.a.stop)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class From_clauseContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.From_clauseContext, self).__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(cedlParser.FROM, 0)

        def event_list(self):
            return self.getTypedRuleContext(cedlParser.Event_listContext,0)


        def getRuleIndex(self):
            return cedlParser.RULE_from_clause

        def enterRule(self, listener):
            if hasattr(listener, "enterFrom_clause"):
                listener.enterFrom_clause(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitFrom_clause"):
                listener.exitFrom_clause(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitFrom_clause"):
                return visitor.visitFrom_clause(self)
            else:
                return visitor.visitChildren(self)




    def from_clause(self):

        localctx = cedlParser.From_clauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_from_clause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(cedlParser.FROM)
            self.state = 103
            self.event_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Event_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.Event_listContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.nodes = None
            self.a = None # EventContext
            self.b = None # EventContext

        def event(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(cedlParser.EventContext)
            else:
                return self.getTypedRuleContext(cedlParser.EventContext,i)


        def COMMA(self, i=None):
            if i is None:
                return self.getTokens(cedlParser.COMMA)
            else:
                return self.getToken(cedlParser.COMMA, i)

        def getRuleIndex(self):
            return cedlParser.RULE_event_list

        def enterRule(self, listener):
            if hasattr(listener, "enterEvent_list"):
                listener.enterEvent_list(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEvent_list"):
                listener.exitEvent_list(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitEvent_list"):
                return visitor.visitEvent_list(self)
            else:
                return visitor.visitChildren(self)




    def event_list(self):

        localctx = cedlParser.Event_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_event_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            localctx.a = self.event()

            localctx.nodes = []
            localctx.nodes.append(localctx.a.node)

            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cedlParser.COMMA:
                self.state = 107
                self.match(cedlParser.COMMA)
                self.state = 108
                localctx.b = self.event()

                localctx.nodes.append(localctx.b.node)

                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EventContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(cedlParser.EventContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.node = None
            self.a = None # Premitive_eventContext

        def premitive_event(self):
            return self.getTypedRuleContext(cedlParser.Premitive_eventContext,0)


        def pattern_event_1(self):
            return self.getTypedRuleContext(cedlParser.Pattern_event_1Context,0)


        def pattern_event_n(self):
            return self.getTypedRuleContext(cedlParser.Pattern_event_nContext,0)


        def pattern_event_2(self):
            return self.getTypedRuleContext(cedlParser.Pattern_event_2Context,0)


        def getRuleIndex(self):
            return cedlParser.RULE_event

        def enterRule(self, listener):
            if hasattr(listener, "enterEvent"):
                listener.enterEvent(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEvent"):
                listener.exitEvent(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitEvent"):
                return visitor.visitEvent(self)
